# SocialLens

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
emotion_detector/: EmotionDetector.hpp  emo_affectnet.onnx  main.cpp  make_onnx.py
include/attention_demo/: attention_estimator.hpp  attentiveness_scorer.hpp  demo_video_app.hpp  overlay_renderer.hpp  status_flags.hpp
initial_test/: CMakeLists.txt  attention_test.cpp  attention_tracker.cpp  hello_vitals.cpp
scripts/: build.sh  run_demo.sh  setup_onnxruntime.sh
src/attention_demo/: attention_estimator.cpp  create_demo_video.cpp  demo_video_app.cpp  overlay_renderer.cpp  status_flags.cpp
